# house_price

./: .coveragerc  .env.example  .flake8  .gitignore  .sqlfluff  README.md  pyproject.toml  requirements.txt  setup.py
etl/config/: db_config.py  env_config.py
etl/extract/: extract.py  extract_house_prices.py
etl/load/: load.py  post_load_enrichment.py
etl/sql/: heatmap_outcode.sql  placeholder.sql  v_avg_price_outcode.sql  v_flips_24m.sql
etl/transform/: clean_house_prices.py  transform.py
scripts/: delete_later_test_db_connection.py  run_etl.py
streamlit_app/: Home.py  config.py  dashboard.py  data_access.py  new_home.py
streamlit_app/draft_pages/: home.py  old_home_page.py  overview.py  top10.py
streamlit_app/pages/: Borough_Breakdown.py  Outward_code.py  Property_Flips.py  Stamp_Duty_Holiday_Impact.py
tests/: run_tests.py
tests/component_tests/: test_clean_house_prices_component.py
tests/integration_tests/: test_db_connection_integration.py  test_extract_house_prices.py
tests/test_data/: expected_house_prices.csv  test_house_prices.csv
tests/unit_tests/: test_clean_house_prices.py  test_db_config.py  test_db_utils.py  test_extract_house_prices.py  test_sql_utils.py
utils/: db_utils.py  file_utils.py  logging_utils.py  sql_utils.py
